--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="#f8f9fa">
   <meta name="background-color" content="#ffffff">
   <link rel="apple-touch-icon" href="res/logo-512.png">
-  <title>查看我的 IP 地址 | 查询本机 IP 地址及归属地 | 查看 WebRTC 连接 IP ｜ DNS 泄露检测</title>
+  <title>查看我的 IP 地址 | 查询本机 IP 地址及归属地 | 查看 WebRTC 连接 IP ｜ DNS 泄露检测 | Jason Ng 阿禅开源作品 </title>
   <!--  Bootstrap CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -126,9 +126,9 @@
                   </div>
 
                   <!--  Google Maps iFrame -->
-                  <iframe class="card-img-top" :src="card.mapUrl" width="100%" height="200" frameborder="0"
+                  <!-- <iframe class="card-img-top" :src="card.mapUrl" width="100%" height="200" frameborder="0"
                   style="border:0;" allowfullscreen>
-                </iframe>
+                </iframe> -->
 
                   <img v-if="isMapShown" v-if="!isMobile" :src="card.mapUrl" class="card-img-top jn-map-image"
                     alt="Map">
@@ -365,10 +365,8 @@
     </div>
 
     <footer>
-      <p class="text-center">
-        &copy; 2023 <a href="https://ip.mingge.link/" class="link-dark" target="_blank">ip.mingge.link</a>. All rights reserved.<br>
-        <a href="https://github.com/jason5ng32/MyIP/" class="link-dark" target="_blank">View on Github.</a>
-      </p>
+      <p class="text-center">&copy; 2023 ip.mingge.link. All rights reserved. <a href="https://github.com/jason5ng32/MyIP" class="link-dark"
+          target="_blank"><i class="bi bi-github" :class="{ 'dark-mode': isDarkMode }"></i></a></p>
     </footer>
 
   </div>
